[package]
name = "ceph-safe-disk"
version = "0.1.0"
authors = ["Alberto Corona <ac@albertocorona.com>"]
build = "build/build.rs"

[build-dependencies]
serde_codegen = "0.7"

[dependencies]
getopts = "0.2"
ansi_term = "0.7"
serde = "0.7"
serde_json = "0.7"
users = "0.5"

[lib]
name = "ceph"
path = "lib/lib.rs"
