[package]
name = "ceph-safe-disk"
version = "0.1.0"
authors = ["Alberto Corona <ac@albertocorona.com>"]
build = "build/build.rs"

[build-dependencies]
serde_codegen = "0.7"

[dependencies]
ansi_term = "0.7"
getopts = "0.2"
json = "~0.10"
serde = "0.7"
serde_json = "0.7"
users = "0.5"

[lib]
name = "ceph"
path = "lib/lib.rs"
