[package]
name = "ceph-safe-disk"
version = "0.1.0"
repository = "https://github.com/CanonicalLtd/ceph_safe_disk"
description = "Ceph disk safety removal tool"
authors = [
	"Alberto Corona <ac@albertocorona.com>",
	"Chris Holcombe <xfactor973@gmail.com>"
]
license = "MIT"
exclude = [
	"test/*",
	"debian/*",
]
keywords = ["ceph"]

[dependencies]
getopts = "0.2"
ansi_term = "0.7"
serde = "^0.9"
serde_derive = "^0.9"
serde_json = "^0.9"
users = "0.5"

[lib]
name = "ceph"
path = "lib/lib.rs"
